--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ virtualenv = "==20.0.31"
 importlib-metadata = "==1.7.0"
 psycopg2-binary = "==2.8.5"
 psycopg2 = "*"
+pillow = "*"
 
 [dev-packages]
 
