--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,8 @@ django-tailwind = "*"
 django-extensions = "*"
 pyparsing = "*"
 pydot = "*"
+django-crispy-forms = "*"
+crispy-tailwind = "*"
 
 [dev-packages]
 
