--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ pyparsing = "*"
 pydot = "*"
 django-crispy-forms = "*"
 crispy-tailwind = "*"
+django-phonenumber-field = {extras = ["phonenumbers"], version = "*"}
 
 [dev-packages]
 
