--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,9 @@ django-crispy-forms = "*"
 crispy-tailwind = "*"
 django-phonenumber-field = {extras = ["phonenumbers"], version = "*"}
 qrcode = "*"
+environs = {version = "==8.0.0", extras = ["django"]}
+whitenoise = "==5.1.0"
+gunicorn = "==20.0.4"
 
 [dev-packages]
 
