--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ django-crispy-forms = "*"
 crispy-tailwind = "*"
 django-phonenumber-field = {extras = ["phonenumbers"], version = "*"}
 qrcode = "*"
+dj-database-url = "*"
 
 [dev-packages]
 
