--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - db
     environment:
       - "DJANGO_SECRET_KEY=5_fzp%ibq*#l5ofy1lucm0i2d79jw=(2h1wvoaq75z(8+6jn)5"
-      - "DJANGO_DEBUG=False"
+      - "DJANGO_DEBUG=True"
       - "DJANGO_SECURE_SSL_REDIRECT=False" # new
       - "DJANGO_SECURE_HSTS_SECONDS=0" # new
       - "DJANGO_SECURE_HSTS_INCLUDE_SUBDOMAINS=False" # new
