--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+django-cors-headers="*"
 django = "==3.2.3"
 virtualenv = "==20.0.31"
 importlib-metadata = "==1.7.0"
