--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,15 +3,14 @@ version: '3.7'
 services:
   web:
     build: .
-    # command: python /code/manage.py runserver 0.0.0.0:8000
-    command: gunicorn config.wsgi -b 0.0.0.0:8000
-
+    command: python /code/manage.py runserver 0.0.0.0:8000
+#    command: gunicorn config.wsgi -b 0.0.0.0:8000
     volumes:
       - .:/code
     ports:
       - 8000:8000
     depends_on:
-      - db
+     - db
     environment:
       - "DJANGO_SECRET_KEY=5_fzp%ibq*#l5ofy1lucm0i2d79jw=(2h1wvoaq75z(8+6jn)5"
       - "DJANGO_DEBUG=True"
