--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ environs = {version = "==8.0.0", extras = ["django"]}
 whitenoise = "==5.1.0"
 gunicorn = "==20.0.4"
 babel = "*"
+django-intl-tel-input2 = "*"
 
 [dev-packages]
 
