--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,7 @@ name = "pypi"
 django-cors-headers="*"
 django = "==3.2.3"
 virtualenv = "==20.0.31"
+django-intl-tel-input2= "*"
 importlib-metadata = "==1.7.0"
 psycopg2-binary = "==2.8.5"
 pillow = "*"
