--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+django_multivalueformfield="*"
 django-cors-headers="*"
 django = "==3.2.3"
 virtualenv = "==20.0.31"
@@ -24,6 +25,7 @@ environs = {version = "==8.0.0", extras = ["django"]}
 whitenoise = "==5.1.0"
 gunicorn = "==20.0.4"
 babel = "*"
+django-multivalueformfield = "*"
 
 [dev-packages]
 
