--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+django-celery-beat="*"
 django-multiupload = "*"
 django_multivalueformfield="*"
 django-cors-headers="*"
